add register and login handler function
